<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/add_alarm_drawer"
            android:icon="@drawable/ic_add_black_36dp"
            android:title="@string/add_alarm" />
        <item
            android:id="@+id/add_pill_drawer"
            android:icon="@drawable/ic_add_black_36dp"
            android:title="@string/add_pill" />
        <item
            android:id="@+id/settings_drawer"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/find_pharmacy_drawer"
            android:icon="@drawable/ic_room_black_36dp"
            android:title="@string/find_pharmacy" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/about_drawer"
                android:icon="@drawable/ic_help_outline_black_36dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
